# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2017-12-07 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix optional integration tests configuration use of configure prefix
    * Fix python quickstart for python 3 use

2017-12-02 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix the cloudi_service_monitoring aspect functions so they will
      not cause an exception if the cloudi_service_monitoring_cloudi
      module is reloaded

2017-11-26 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Allow cloudi_queue to do a service name lookup for a retry if
      the pattern_pid() was not provided to the initial cloudi_queue send

2017-11-25 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add retry_delay option to cloudi_queue

2017-10-21 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Change the transaction id v1 UUID to have a node id created from
      the lookup3 Bob Jenkins hash function
      (it remains 16 bits for the node hash and 32 bits for the pid hash)
    * Update uuid and quickrand

2017-10-14 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add cloudi_queue functions failures, recv_id, send_id and size
    * Fix the hexpi integration test termination to
      wait for all cloudi_queue sends to complete
    * Change nodejs nice setting to 19 in integration tests configuration
      due to its extreme CPU use without yield when idle

2017-10-12 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix monitor message leaks
    * Fix optional programming language integration test configuration
      scope name to reflect "test_" prefix that was added to test names
    * Update cpg and varpool

2017-09-14 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix cloudi_service_null to provide a null response
      (noreply does not provide a null response)
    * Change cloudi_service_null to only use the service pattern prefix